# plover_dict_commands

./: .gitignore  README.rst  plover_dict_commands.py  setup.cfg  test.py
