[metadata]
name = plover_dict_commands
version = 0.2.4
description = Dictionaries stack manipulation commands for Plover
long_description = file: README.rst
author = Ian Cloud
author_email = ko0oyotl@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/KoiOates/plover_dict_commands
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=34.4.0
	setuptools-scm
install_requires =
	plover>=4.0.0.dev1
py_modules =
	plover_dict_commands

[options.entry_points]
plover.command =
	priority_dict = plover_dict_commands:priority_dict
	toggle_dict   = plover_dict_commands:toggle_dict
	solo_dict   = plover_dict_commands:solo_dict
	end_solo_dict   = plover_dict_commands:end_solo_dict

[bdist_wheel]
universal = 1

# vim: commentstring=#\ %s list
